Fix bug where modals were not scrollable
Fix bug where when the window was too small, modals will be
cut off and user was unable to scroll, so they were not able
to reach the Done/Cancel buttons and other tools.

--- a/style.css
+++ b/style.css
@@ -155,6 +155,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.25);
   display: none;
+  overflow-y: auto;
 }
 
 #rainbow-disclaimer {
@@ -165,7 +166,7 @@ body {
   width: 500px;
   background-color: white;
   padding: 40px;
-  margin: 100px auto; /* center horizontally */
+  margin: 50px auto; /* center horizontally */
 }
 
 .color-select {
